Fixing mobile top nav so icons are left and right aligned

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -1529,7 +1529,7 @@ table[data-type='exhibit']{
     
     #nav_small{
         display:grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: .25fr 2fr .25fr;
         width:100vw;
     }
     
